tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vcvtdq2ps_ymm_ymm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:194:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 32, i8* nonnull %6) #22
            ^
0.02user 0.03system 0:00.15elapsed 39%CPU (0avgtext+0avgdata 27472maxresident)k
0inputs+16outputs (0major+3276minor)pagefaults 0swaps
